[gd_scene load_steps=9 format=3 uid="uid://c4mo2s65pg3uh"]

[ext_resource type="Script" path="res://gameObjects/UI/weapon_ui.gd" id="1_5qa8k"]
[ext_resource type="Texture2D" uid="uid://dfphfdv1iodqm" path="res://art/Custom/launcher.png" id="1_v1wmu"]
[ext_resource type="StyleBox" uid="uid://dp2as77dsgsyx" path="res://gameObjects/resources/weapon_ui.tres" id="2_jsowk"]
[ext_resource type="Texture2D" uid="uid://cxd2x4ydumc41" path="res://art/UI/ui x3.png" id="4_pjq72"]
[ext_resource type="AudioStream" uid="uid://b0rcbu38m1f80" path="res://sfx/SCI-FI_UI_SFX_PACK/Tone2/Octave/Ring_Pitched_Down.wav" id="5_vext6"]
[ext_resource type="AudioStream" uid="uid://dsnsjyk47fcg4" path="res://sfx/SCI-FI_UI_SFX_PACK/Rings/Ring_Pitched_Up.wav" id="6_l8r0e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bu4ke"]
atlas = ExtResource("4_pjq72")
region = Rect2(206.889, 231.408, 162.111, 14.5922)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm1fc"]
atlas = ExtResource("4_pjq72")
region = Rect2(1358.88, 423.439, 162.119, 14.5611)

[node name="weaponUi" type="Control" groups=["weaponUI"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5qa8k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_right = 400.0
offset_bottom = 251.0
theme_override_styles/panel = ExtResource("2_jsowk")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 3.0
offset_right = 383.0
offset_bottom = 180.0
texture = ExtResource("1_v1wmu")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 178.0
offset_right = 375.0
offset_bottom = 236.0

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 2.0
offset_right = 400.0
offset_bottom = 251.0
theme_override_styles/panel = ExtResource("2_jsowk")

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
offset_right = 369.0
offset_bottom = 148.0
theme_override_font_sizes/font_size = 40
text = "OFFLINE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="Panel2"]
layout_mode = 0
offset_left = 15.0
offset_top = 180.0
offset_right = 387.0
offset_bottom = 207.0
value = 80.0
fill_mode = 6
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_bu4ke")
texture_progress = SubResource("AtlasTexture_pm1fc")
tint_progress = Color(2.96, 0.08, 0.04, 1)

[node name="Timer" type="Timer" parent="Panel2"]
one_shot = true

[node name="SFX" type="Node" parent="."]

[node name="timeoutSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_vext6")
bus = &"SFX"

[node name="rechargeSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_l8r0e")
bus = &"SFX"

[connection signal="timeout" from="Panel2/Timer" to="." method="_on_timer_timeout"]
